2010-06-21  Adam Endrodi <adam.endrodi@blumsoft.eu>

	NB#137880 Selecting bookmark is slow to launch site, resulting
		  in multiple clicks and multiple browser instances

	Don't show the widgets as long as the load is high.
	Configurable via /etc/hildon-desktop/home.conf.

	* debian/control:
	  Depend on new version of libhildondesktop.
	* src/home.conf.in:
	  New configuration settings.
	* src/hd-applet-manager.c (plugin_added_cb):
	  If hd_applet_manager_throttled() keep a list of @throttled_plugins
	  and only gtk_widget_show() them when we're ready.
	* src/hd-task-shortcut.c (hd_task_shortcut_desktop_file_changed_cb):
	  Don't show the shortcut if the HDShortcuts is throttled.
	* src/hildon-home.c (waitidle):
	  Right when entering the main loop start watching the CPU activity,
	  show the idle-percentage on a banner and show the widgets when it
	  reaches the desired level.

2010-06-10  Adam Endrodi <adam.endrodi@blumsoft.eu>

	Release 0.3.69.

2010-06-10  Adam Endrodi <adam.endrodi@blumsoft.eu>

	NB#159589 Change background. Logical ID for 'Get more from Ovi Store'
		  "home_li_get_ovi"

	* src/hd-available-backgrounds.c (hd_available_backgrounds_run):
	  Use explicit message catalog with dgettext() because plugins
	  may decide to change the default.

2010-05-25  Adam Endrodi <adam.endrodi@blumsoft.eu>

	Release 0.3.68.

2010-06-04  Adam Endrodi <adam.endrodi@blumsoft.eu>

	NB#172384 hildon-home leaks X resources: Pixmaps during generic use

	* src/hd-incoming-event-window.c (hd_incoming_event_window_realize):
	  Once passed to the notification window, release the background
	  pixmap.

2010-05-25  Adam Endrodi <adam.endrodi@blumsoft.eu>

	Release 0.3.67.

2010-05-07  Adam Endrodi <adam.endrodi@blumsoft.eu>

	NB#162675 desktop recompilation with G_DISABLE_CAST_CHECKS

	* configure.ac: add to $CFLAGS

2010-02-19  Adam Endrodi <adam.endrodi@blumsoft.eu>

	Release 0.3.66-2.

2010-02-18  Adam Endrodi <adam.endrodi@blumsoft.eu>
