@@ -31,6 +31,7 @@
 #include "hd-cairo-surface-cache.h"
 #include "hd-shortcut-widgets.h"
 #include "hd-task-shortcut.h"
+#include "hd-dbus-utils.h"
 
 /* Layout from Task navigation layout guide 1.2 */
 #define SHORTCUT_WIDTH 96
@@ -283,18 +284,17 @@ button_release_event_cb (GtkWidget      *widget,
   if (event->button == 1 &&
       priv->button_pressed)
     {
-      gchar *desktop_id;
+      gchar *id, *p;
 
       priv->button_pressed = FALSE;
 
       gtk_widget_queue_draw (widget);
 
-      desktop_id = hd_plugin_item_get_plugin_id (HD_PLUGIN_ITEM (shortcut));
-
-      hd_shortcut_widgets_launch_task (HD_SHORTCUT_WIDGETS (hd_shortcut_widgets_get ()),
-                                       desktop_id);
-
-      g_free (desktop_id);
+      id = hd_plugin_item_get_plugin_id (HD_PLUGIN_ITEM (shortcut));
+      if ((p = strstr (id, ".desktop")) != NULL)
+          *p = '\0';
+      hd_utils_launch_task (id);
+      g_free (id);
 
       return TRUE;
     }
